<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_blue_dark"
        tools:context="com.lisaveras.porfolio.MainActivity">

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:id="@+id/spotifyButton"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:background="@android:color/holo_orange_dark"
            android:tag="@string/spotify"
            android:onClick="announceApp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:id="@+id/scoresButton"
            android:background="@android:color/holo_orange_light"
            android:layout_below="@+id/spotifyButton"
            android:layout_alignLeft="@+id/spotifyButton"
            android:layout_alignStart="@+id/spotifyButton"
            android:tag="@string/scores"
            android:onClick="announceApp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:id="@+id/libraryButton"
            android:layout_below="@+id/scoresButton"
            android:layout_alignLeft="@+id/scoresButton"
            android:layout_alignStart="@+id/scoresButton"
            android:background="@android:color/holo_orange_dark"
            android:tag="@string/library"
            android:onClick="announceApp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/bigger"
            android:id="@+id/biggerButton"
            android:layout_below="@+id/libraryButton"
            android:layout_alignLeft="@+id/libraryButton"
            android:layout_alignStart="@+id/libraryButton"
            android:background="@android:color/holo_orange_light"
            android:tag="@string/bigger"
            android:onClick="announceApp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/reader"
            android:id="@+id/readerButton"
            android:layout_below="@+id/biggerButton"
            android:layout_alignLeft="@+id/biggerButton"
            android:layout_alignStart="@+id/biggerButton"
            android:background="@android:color/holo_orange_dark"
            android:tag="@string/reader"
            android:onClick="announceApp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/tba"
            android:id="@+id/tbaButton"
            android:layout_below="@+id/readerButton"
            android:layout_alignLeft="@+id/readerButton"
            android:layout_alignStart="@+id/readerButton"
            android:background="@android:color/holo_orange_light"
            android:tag="@string/tba"
            android:onClick="announceApp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Lisa Veras&apos;s Future Apps"
            android:id="@+id/title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp" />

    </RelativeLayout>
</ScrollView>

